# social-axum

./: Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: build.yaml
migrations/: 20240306143149_init.sql  20240306153147_init.down.sql  20240306153147_init.up.sql  20240310065452_access_token.down.sql  20240310065452_access_token.up.sql  20240310072748_remove_email.down.sql  20240310072748_remove_email.up.sql  20240310072930_change_name_to_username.down.sql  20240310072930_change_name_to_username.up.sql  20240310073207_uniqe_username.down.sql  20240310073207_uniqe_username.up.sql
src/: lib.rs  main.rs  models.rs  routes.rs
