[package]
name = "todo-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = "0.7.4"
chrono = "0.4.34"
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
