[package]
name = "social_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "chrono",
  "uuid",
] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.4", features = ["macros"] }
chrono = { version = "0.4.34", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["serde"] }
